# allygator

./: .clang-format  CMakeLists.txt  LICENSE  NOTES  README
include/allygator/: action.hpp  ddp.hpp  numeric_diff.hpp  problem.hpp  shooting.hpp  utils.hpp
src/: allygator.cpp  ddp.cpp  numeric_diff.cpp  shooting.cpp
test/: CMakeLists.txt  test_numeric_diff.cpp  test_problem.cpp  test_solve.cpp
